// $Id$

TO DO
------
* Ability to receive the same message through more than one channel. It should be possible to implement some ‘abstract’ sending method that pipes messages through two or more other channels.
* More sending methods plug-ins: IM, Twitter, etc...

5.x-1.0-beta2 to 5.x-1.0-rc1
--------------------------------
- Creating default Messaging filter on install, #284414
- Fixed parameter inconsistency, by darren.ferguson, #272545
- Changed some names and texts to make them easier to understand
- Added error message on settings page when no sending methods enabled.
- Updated sms plug-in for smsframework 5.x-1.0 version
- Fixed issue with mimemail, by jeffmurphy, #250236
- Fixed bug: "Can't delete message parts", by therzog, #255640
- Regrouped admin pages for messaging and notifications

5.x-1.0-beta1 to 5.x-1.0-beta2
--------------------------------
- User settings improvements. Disabled when only one send methods.
- Strenghten permissions when changed, ignoring previous user settings.
- Removed obsoleted messaging_text_vars()
- Removed unused function messaging_message_filter()
- Support for empty message parts and improvements with help texts for message parts settings.

5.x-1.0-alpha2 to 5.x-1.0-beta1
--------------------------------
- Added formatting, pager and delete option for messaging_simple module
- Added formatting and pager for messaging_debug(), fixed some strings
- Fixed annoying hidden char issue for messaging_sms module, http://drupal.org/node/243246
- Added helper function messaging_mail_params()
- API change for consistency with queue processing: The send callback now takes a single destination
- Added $message['sender_account'] parameter
- Added some api documentation as function comments
- Fixed bug in queue processing, by jaydub
- New: Implemented message queueing and logging, big patch
- Reworked message pull hooks, now it doesn't rely on other modules
- Added some tests, covered message queueing and some plug-in APIs
