@@ -777,8 +777,9 @@ function messaging_message_render($message, $info) {
   if (!empty($message['rendered'])) {
     return $message;
   }
-  // Apply footer prefix if provided
-  if (!empty($info['footer']) && isset($message['body']['footer'])) {
+  // Apply footer prefix if provided and the message has a footer element. 
+  // Note: If message body is a string the final isset($message['body']['footer']) will be true
+  if (!empty($info['footer']) && is_array($message['body']) && isset($message['body']['footer'])) {
     $message['body']['footer'] = array('#prefix' => $info['footer'], '#text' => $message['body']['footer']);
   }
   // Render separately subject and body info, adding default parameters
