@@ -5,6 +5,11 @@ TO DO
 * Ability to receive the same message through more than one channel. It should be possible to implement some ‘abstract’ sending method that pipes messages through two or more other channels.
 * More sending methods plug-ins: IM, Twitter, etc...
 
+5.x-1.0-rc1 to .........
+--------------------------------
+- Fixed: Condition produces false positive when rendering messages, by andremolnar, #290163
+- Added unit tests for message rendering.
+
 5.x-1.0-beta2 to 5.x-1.0-rc1
 --------------------------------
 - Creating default Messaging filter on install, #284414
